--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,94 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Text">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+
+    <style name="Text.card_event">
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_gravity">center|bottom</item>
+    </style>
+
+
+    <style name="Text.moreScreen_headings" parent="Text">
+        //fonts are same as default
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+    </style>
+
+
+    <style name="Text.personal_details_heading" parent="Text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:paddingStart">10dp</item>
+    </style>
+
+
+    <style name="Text.personal_detail_params" parent="Text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginStart">10dp</item>
+    </style>
+
+
+    <style name="Text.textView_card">
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_height">@dimen/card_TextView_height</item>
+    </style>
+
+
+    <style name="moreScreen_Buttons" parent="Widget.AppCompat.Button">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:gravity">start|center</item>
+        <item name="android:background">@color/White</item>
+    </style>
+
+
+    <style name="bottom_toolbar_button" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@color/White</item>
+        <item name="android:textColor">@color/JunctionLightGray</item>
+    </style>
+
+
+    <style name="card_buttons" parent="Widget.AppCompat.Button">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">50dp</item>
+    </style>
+
+
+    <style name="autofill_linear_layout">
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/autofill_linear_layout_padding</item>
+    </style>
+
+    <style name="Personal_details_linear_layout">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+
+    <style name="SearchBar">
+        <item name="android:background">@drawable/active_button_purple</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:paddingLeft">20dp</item>
+    </style>
+
 </resources>
