made login, signup1, signup2,signup3 and updated styles and minor changes to colors and strings

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="JunctionPurple">#990099</color>
     <color name = "JunctionLightGray">#EEEEEE</color>
     <color name = "White">#FFFFFF</color>
+    <color name="grey">#686868</color>//for buttons
 </resources>
